test/files/neg/macro-constructor-badret.check
Test_2.scala:4: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context)(x: c.Expr[Int]): c.Expr[C]
 found   : (c: scala.reflect.macros.Context)(x: c.Tree): c.Expr[X]
type mismatch for return type: c.Expr[X] does not conform to c.Expr[C]
  def this(x: Int) = macro Macros.ctor
      ^
one error found
